# Perception

./: .gitignore  README.md
camera_ws/src/: test.py
camera_ws/src/camera/: setup.py
camera_ws/src/camera/camera/: camera.py
docker/: Dockerfile  docker-compose.yml
lidar_ws/install/: local_setup.sh  setup.sh
lidar_ws/log/: latest_build
lidar_ws/src/cpp_lidar/: CMakeLists.txt
lidar_ws/src/cpp_lidar/src/: cpp_lidar.cpp
lidar_ws/src/py_lidar/py_lidar/: py_lidar.py
perception_ws/src/camera/: package.xml
perception_ws/src/camera_pub/camera_pub/: camera_pub.py
perception_ws/src/detection/: package.xml  setup.py
perception_ws/src/detection/detection/: detection.py
piracer_ws/install/: local_setup.sh  setup.ps1  setup.sh
piracer_ws/log/: latest_build
piracer_ws/src/digital_twin/: CMakeLists.txt  package.xml
piracer_ws/src/teleop/: setup.py
plugin_ws/src/diff_drive/: CMakeLists.txt
sim_ws/src/sim/: CMakeLists.txt  package.xml
slam_ws/install/: local_setup.sh  setup.sh
slam_ws/log/: latest_build
slam_ws/src/gazebo_slam/: CMakeLists.txt  controller.sh  package.xml
src/data/: main.py
src/detect/: CMakeLists.txt  main.cpp  main.py
src/object_detect/: objectDetect.py  real.py
teleop_ws/install/: setup.bash  setup.zsh
teleop_ws/log/: latest_build
test/install/: local_setup.sh  setup.sh
test/log/: latest_build
test/src/digital_twin/: controller.sh
vehicle_ws/install/: local_setup.sh  setup.sh
vehicle_ws/log/: latest_build
vehicle_ws/src/ackermann_drive/: CMakeLists.txt  controller.sh
vehicle_ws/src/diff_drive/: controller.sh
(+147 files in other folders)
